--- a/config.h.in
+++ b/config.h.in
@@ -22,8 +22,17 @@
 /* Define to 1 if you have the `itoa' function. */
 #undef HAVE_ITOA
 
+/* Define to 1 if you have the `bz2' library (-lbz2). */
+#undef HAVE_LIBBZ2
+
+/* Define to 1 if you have the `expat' library (-lexpat). */
+#undef HAVE_LIBEXPAT
+
 /* Define to 1 if you have the `jpeg' library (-ljpeg). */
 #undef HAVE_LIBJPEG
+
+/* Define to 1 if you have the `physfs' library (-lphysfs). */
+#undef HAVE_LIBPHYSFS
 
 /* Define to 1 if you have the `SDL_image' library (-lSDL_image). */
 #undef HAVE_LIBSDL_IMAGE
