--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -599,6 +599,9 @@
 					RelativePath="..\..\..\widgets\targetcoordinatelocator.cpp">
 				</File>
 				<File
+					RelativePath="..\..\..\widgets\textrenderer-addons.cpp">
+				</File>
+				<File
 					RelativePath="..\..\..\widgets\textrenderer.cpp">
 				</File>
 			</Filter>
