--- a/source/widgets/Makefile.in
+++ b/source/widgets/Makefile.in
@@ -46,7 +46,8 @@ LTLIBRARIES = $(noinst_LTLIBRARIES)
 libwidgets_la_DEPENDENCIES =
 am_libwidgets_la_OBJECTS = textrenderer.lo bargraphwidget.lo \
 	dropdownselector.lo multilistbox.lo autoprogressbar.lo \
-	playerselector.lo targetcoordinatelocator.lo
+	playerselector.lo targetcoordinatelocator.lo \
+	textrenderer-addons.lo
 libwidgets_la_OBJECTS = $(am_libwidgets_la_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(top_builddir)@am__isrc@
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -213,7 +214,7 @@ top_srcdir = @top_srcdir@
 MAINTAINERCLEANFILES = Makefile.in
 AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS) 
 noinst_LTLIBRARIES = libwidgets.la 
-libwidgets_la_SOURCES = textrenderer.cpp bargraphwidget.cpp dropdownselector.cpp  multilistbox.cpp autoprogressbar.cpp playerselector.cpp targetcoordinatelocator.cpp 
+libwidgets_la_SOURCES = textrenderer.cpp bargraphwidget.cpp dropdownselector.cpp  multilistbox.cpp autoprogressbar.cpp playerselector.cpp targetcoordinatelocator.cpp textrenderer-addons.cpp 
 libwidgets_la_LIBADD = @SDL_LIBS@
 INCLUDES = -I$(top_srcdir)/source/libs/paragui/include 
 EXTRA_DIST = $(srcdir)/*.h
@@ -274,6 +275,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/multilistbox.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/playerselector.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/targetcoordinatelocator.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/textrenderer-addons.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/textrenderer.Plo@am__quote@
 
 .cpp.o:
