--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -210,10 +210,10 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = dialog units trrobj trrobj2 buildings @MUSICDIR@
-DIST_SUBDIRS = dialog units trrobj trrobj2 buildings music
+SUBDIRS = dialog units trrobj trrobj2 buildings icons sounds @MUSICDIR@
+DIST_SUBDIRS = dialog units trrobj trrobj2 buildings icons sounds music
 MAINTAINERCLEANFILES = Makefile.in
-EXTRA_DIST = $(srcdir)/* $(srcdir)/icons/* $(srcdir)/sounds/*
+EXTRA_DIST = $(srcdir)/* 
 pkgdata_DATA = main.con 
 all: all-recursive
 
