--- a/source/graphics/Makefile.am
+++ b/source/graphics/Makefile.am
@@ -6,7 +6,7 @@ AM_CXXFLAGS		= @SDL_CFLAGS@ @SIGC_CFLAGS@
 noinst_LTLIBRARIES 	= libgraphics.la
 
 libgraphics_la_SOURCES	= surface.cpp blitter.cpp drawing.cpp surface2png.cpp
-libgraphics_la_LIBADD		= @SDL_LIBS@ 
+libgraphics_la_LIBADD		= @SDL_LIBS@ -lpng -lz
 
 ## INCLUDES = -I$(top_srcdir)/source/libs/paragui/include 
 
