--- a/source/graphics/Makefile.in
+++ b/source/graphics/Makefile.in
@@ -213,7 +213,7 @@ MAINTAINERCLEANFILES = Makefile.in
 AM_CXXFLAGS = @SDL_CFLAGS@ @SIGC_CFLAGS@ 
 noinst_LTLIBRARIES = libgraphics.la
 libgraphics_la_SOURCES = surface.cpp blitter.cpp drawing.cpp surface2png.cpp
-libgraphics_la_LIBADD = @SDL_LIBS@ 
+libgraphics_la_LIBADD = @SDL_LIBS@ -lpng -lz
 EXTRA_DIST = $(srcdir)/*.h  
 all: all-am
 
