--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,14 +1,16 @@
-SUBDIRS 		= dialog units trrobj trrobj2 buildings icons sounds @MUSICDIR@
-DIST_SUBDIRS= dialog units trrobj trrobj2 buildings icons sounds music
-MAINTAINERCLEANFILES    = Makefile.in
+SUBDIRS      = dialog  @MUSICDIR@
+DIST_SUBDIRS = dialog unitsets trrobj buildings icons sounds music
+MAINTAINERCLEANFILES  = Makefile.in
 
 EXTRA_DIST = $(srcdir)/* 
 
-pkgdata_DATA 		= main.con 
+pkgdata_DATA 		= main.ascdat 
 pkgdatadir 		= $(datadir)/games/@PACKAGE@
 
-main.con: $(srcdir)/*.* $(srcdir)/icons/*.png $(srcdir)/icons/*.ascgui $(srcdir)/sounds/*.wav $(srcdir)/sounds/*.ogg $(srcdir)/sounds/*.asctxt
-	cd $(srcdir) && @abs_top_builddir@/source/tools/linux/asc_mount @MAINCONDATA@ icons/*.png icons/*.ascgui sounds/*.wav sounds/*.ogg sounds/*.asctxt @abs_builddir@/main.con
+@maindatainclude@
+
+main.ascdat: main.d
+	cd $(srcdir) && @abs_top_builddir@/source/tools/linux/asc_mount \@files.txt @abs_builddir@/main.ascdat && touch main.d
 
 clean-local:
-	rm -f main.con
+	rm -f main.ascdat main.d main.mak
